Implement location services. Update main fragment on location change.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Coffeemania</string>
-    <string name="title_item_detail">Item Detail</string>
+    <string name="title_item_detail">Coffeeshop Details</string>
 </resources>
